fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fuqu-io/fuqu-ids2keys",
+    "name": "fuqu-io/laravel-ids2keys",
     "description": "Laravel package boilerplate.",
     "keywords": [
         "laravel",
